--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3"
+    "@material-ui/core": "latest",
+    "@material-ui/icons": "latest",
+    "@material-ui/styles": "latest",
+    "classname": "0.0.0",
+    "faker": "^4.1.0",
+    "react": "next",
+    "react-dom": "next",
+    "react-scripts": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
