--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "latest",
     "@material-ui/icons": "latest",
     "@material-ui/styles": "latest",
+    "axios": "^0.18.0",
     "classname": "0.0.0",
     "faker": "^4.1.0",
     "react": "next",
